--- a/apollo/frontend/static/css/custom.css
+++ b/apollo/frontend/static/css/custom.css
@@ -1,3 +1,4 @@
+.select2-search-field {height: 25px;}
 td.shrink, th.shrink {
   white-space: nowrap;
 }
@@ -7,7 +8,7 @@ td.expand, th.expand {
 }
 
 .filter .btn {
-  min-width: 80px;
+  min-width: 78px;
 }
 
 .modal-content{
